--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                             <span style="--t: 6.6s;">💖</span>
                         </div>
                     </div>
-                    <h4 class="username">To: Lucy 💖<span class="underline"></span></h4>
+                    <h4 class="username">To: Mary Ambani 💖<span class="underline"></span></h4>
 
                     <h3>Happy Birthday</h3>
                     <div class="imageCute">
@@ -159,8 +159,8 @@
                 <div class="card2">
                     <div class="card2-content">
                         <h3>To You!</h3>
-                        <h2> HAPPYBIRTHDAY MOM 💓
-May God bless and protect you ,as you are turning an year older I wish you a happy birthday and may you live to blow as many candles as you can. I love you mum you're the best 💯always 🥳
+                        <h2> HAPPYBIRTHDAY MUM 💓
+To my amazing mum on her birthday! December 1st is such a special day because it marks the arrival of the most special person. I’m so grateful for your wisdom, your warmth, and the home you’ve always made for us. Here’s to celebrating you today may your day be filled with all your favorite things, laughter, and the knowledge of how deeply you are loved. Cheers to you!
                         </h2>
 
                         <div class="imageCute2">
@@ -174,7 +174,7 @@ May God bless and protect you ,as you are turning an year older I wish you a hap
 
 </body>
 <script>
-    let datetxt = "15 August";
+    let datetxt = "1 December";
     let datatxtletter = "💕";
     let titleLetter = "To you";
     let charArrDate = datetxt.split('');
